      * Travelling merchant tells you when new wares are available and should be easier to find
      * Lua Love API should be better at handling input and not apply keys held before started
      * Increase time compression when disabled
      * Inverted how hide, evasion, and stealth values work. Now lower is better
   * New Content
      * New mechanic for House Sirius called flow to unlock psychic powers
         * Gives passive bonuses to Sirius ships
         * Outfits allow use on non-Sirius ships
      * 6 new missions
         * Finish the Minerva campaign
         * Nebula refugees
      * Many new events
         * Abandoned stations with secrets
         * Greedy pirates looking for domination
         * Challenges of the mind
         * Mysterious signals
         * More points of interest
      * Many, many new systems and space objects
         * 67 new star systems with 123 new space objects
         * New graphics for space objects
      * New NPC graphics
      * More NPC and news messages
      * Added the Space Trader Society faction
      * Custom death animations for many ships
      * More ways to increase fleet capacity
   * Engine
      * Map system viewer is more compact
      * Added hook.hail_spob
      * Events support tags
      * Editor supports tags
      * Library to handle conditionals for mission computer missions
      * Added support for disabling specific patrol lanes from being generated
      * Support for Lua scripting for ships
      * Changed api of evt.claim and misn.claim
      * Missions/events load Lua as chunks instead of compiling each time
      * Significant speed-ups in collision detection with quadtrees
      * Hooks "outfit_buy", "outfit_sell", "ship_sell", and "ship_swap" pass Lua objects instead of strings
      * Ships can have extra descriptions that show up on mouse over
      * More Lua API added such as pilot.armour, pilot.shield, or naev.missionList